--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
           </ul>
         </nav>
       </footer>
-    </div>
+      <%= debug(params) if Rails.env.development? %>
+      </div>
   </body>
 </html>
