--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,17 @@
 <%= @user.name %>, <%= @user.email %>
+<div class="col-md-8">
+<% if @user.tweets.any? %>
+    <h3>ツイート (<%= @user.tweets.count %)</h3>
+    <ol class="tweet">
+        <% @tweets.each do |tweet| %>
+            <li id="tweeet-<%= tweet.id %>">
+                <span class="user"><%= link_to tweet.user.name, tweet.user %></span>
+                <span class="content"><%= tweet.content %></span>
+                <span class="timestamp">
+                    投稿日 <%= time_ago_in_words(tweet.created_at) %> 前
+                </span>
+            </li>
+        <% end %>
+    </ol>
+<% end %>
+</div>
